# fast_pool

./: .gitignore  Cargo.toml  README.md
benches/: performance.rs  raw_performance.rs
example/: Cargo.toml
example/src/: main.rs
examples/: lifetime_management.rs
src/: defer.rs  duration.rs  guard.rs  lib.rs  pool.rs  state.rs  time_connection.rs
src/plugin/: check_duration_manager.rs  connection_lifecycle_manager.rs  duration_manager.rs  mod.rs
tests/: conn_lifetime_test.rs  coverage_test.rs  duration_manager_test.rs  lifetime_test.rs  max_idle_conns_test.rs  pool_test.rs
