workspace = { members = ["example"] }
[package]
name = "fast_pool"
version = "1.0.0"
edition = "2021"
description = "The Fast Pool based on channel"
readme = "README.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["caching"]
keywords = ["database", "orm", "pool"]
repository = "https://github.com/rbatis/fast_pool"
homepage = "https://github.com/rbatis/fast_pool"

[dependencies]
async-trait = "0.1"
futures-core = { version = "0.3" }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }
flume = { version = "0.12.0", default-features = false, features = ["async"] }
atomic = "0.6"
